Crear estructura para interfaces

--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
                 android:textSize="14sp"
-                android:textColor="@color/black"
+                android:textColor="@color/semiBlack"
                 android:gravity="center"
                 android:layout_marginTop="16dp"
                 android:text="Ki: "
@@ -65,7 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
-                android:textColor="@color/black"
+                android:textColor="@color/semiBlack"
                 android:gravity="center"
                 android:layout_marginTop="16dp"
                 android:text="MaxKi: "
@@ -83,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
-                android:textColor="@color/black"
+                android:textColor="@color/semiBlack"
                 android:gravity="center"
                 android:layout_marginTop="16dp"
                 android:text="Race: "
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
-                android:textColor="@color/black"
+                android:textColor="@color/semiBlack"
                 android:gravity="center"
                 android:layout_marginTop="16dp"
                 android:text="Gender: "
@@ -112,7 +112,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
-                android:textColor="@color/black"
+                android:textColor="@color/semiBlack"
                 android:gravity="center"
                 android:layout_marginTop="16dp"
                 android:text="Affiliation: "
@@ -124,11 +124,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
-                android:textColor="@color/black"
+                android:textColor="@color/semiBlack"
                 android:gravity="center"
                 android:layout_marginTop="16dp"
                 android:text="Planet: "
-                android:id="@+id/TVPlanet"
+                android:id="@+id/TVPlanetName"
                 android:textAllCaps="true"
                 />
     </LinearLayout>
