--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -4,10 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/nav_host_fragment_content_main"
-        android:name="androidx.navigation.fragment.NavHostFragment"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </fragment>
+        android:layout_height="match_parent"
+        android:id="@+id/RVCharacters">
+    </androidx.recyclerview.widget.RecyclerView>
 </RelativeLayout>
