--- a/app/src/main/res/layout/fragment_character.xml
+++ b/app/src/main/res/layout/fragment_character.xml
@@ -2,14 +2,35 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/blue">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Bienvenido a Dragon Ball Z!"
+        android:id="@+id/titulo"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:textColor="@color/semiWhite"
+        android:textStyle="bold"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
+    </TextView>
 
     <Spinner
         android:id="@+id/spinnerAff"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/yellow"
+        android:padding="8dp"
+        android:layout_below="@id/titulo"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="4dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/RVCharacters"
